--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@emotion/styled": "11.10.8",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
+    "@mui/x-date-pickers": "^7.7.0",
+    "axios": "^1.7.2",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "dayjs": "^1.11.11",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
@@ -37,7 +40,7 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && pnpm install && pnpm start"
   },
   "eslintConfig": {
     "extends": [
